Fix: boxed - avoid header elements to horizontally overflow the viewport fixes #508 3. and 4. fixes https://github.com/presscustomizr/hueman-pro-addons/issues/48

--- a/assets/front/css/_parts/0_4_header.css
+++ b/assets/front/css/_parts/0_4_header.css
@@ -252,7 +252,7 @@ box-shadow: -1px 0 0 rgba(255,255,255,0.1); }
   position: absolute;
   top: 0;
   left: 0;
-  width: calc( 100% - 50px );
+  right: 0;
 }
 
 
